--- a/index.html
+++ b/index.html
@@ -15,20 +15,84 @@
 </head>
 <body>
     <div class="cont">
-        <h1>Современные и стильные интерьеры для комфортной жизни</h1>
-        <div class=" Wphoto">
-            <div class="Wtext">
-                <p class="mi_com">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</p>
-            </div>
-        </div>
-        <h2>О НАС</h2>
-        <p class="studiya_osn">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.</p>
 
-        <a class="hr" href="/404">
-            <div class="hrtxt"> 
-                Посмотреть услуги
-            </div> 
-        </a>
+
+        <div class="hat_website">
+            <h1>Современные и стильные интерьеры для комфортной жизни</h1>
+            <div class=" Hphoto">
+                <div class="Htext">
+                    <p class="Htextp">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</p>
+                </div>
+            </div>
+            <h2>О НАС</h2>
+            <p class="studio_founded">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.</p>
+
+            <a class="hr" href="/404">
+                <div class="hrtxt"> 
+                    Посмотреть услуги
+                </div> 
+            </a>
+        </div>
+
+
+        <div class="project">
+            <h2>проекты</h2>
+
+            <ul class="container_projects">
+                <li class="box1_1">
+                    <img class="box1_1__img" src="расходники/box1.jpg" alt="красивое фото картины с диваном">
+                    <h3 class="box1_1__h3">ЖК ПРАВОБЕРЕЖНЫЙ — 112 м² — 2023</h3>
+                    <a class="box1_1__href" href="/404">Подробнее →</a>
+                </li>
+
+                <li class="box1_2">
+                    <img class="box1_1__img" src="расходники/box2.jpg" alt="изображение фото с красивым дизайном">
+                    <h3 class="box1_1__h3">ЖК НОРВЕЖСКИЙ ПАРК — 75 М² — 2023</h3>
+                    <a class="box1_1__href" href="/405">Подробнее →</a>
+                </li>
+
+                <li class="box1_3">
+                    <img class="box1_1__img" src="расходники/box3.jpg" alt="изображение с красивым дизайном, столом и шифоньером">
+                    <h3 class="box1_1__h3">ЖК СОСНОВСКИЕ ОЗЕРА — 94 М² — 2022</h3>
+                    <a class="box1_1__href" href="/406">Подробнее →</a>
+                </li>
+
+                <div class="all_projects"> 
+                    <a href="/408" class="all_projects_txt">Смотреть все проекты</a> 
+                </div>
+            </ul>
+        </div>
+
+
+
+
+        <div class="blacksection">
+            <h2 class="blacksection_uslugi">
+                Услуги
+            </h2>
+
+            <ul class="container_black">
+                <il class="box2_1">
+                    <img class="blacksection__box2_1__img" src="расходники/box2_1.jpg" alt="чертеж с карандашем">
+                    <p class="blacksection__box2_1__p" >Планировочное решение — от 2500₽/м²</p>
+                </il>
+
+                <il class="box2_2">
+                    <img class="blacksection__box2_1__img" src="расходники/box2_2.jpg" alt="градиент цветов ">
+                    <p class="blacksection__box2_1__p" >Дизайн-проект — от 3000₽/м²</p>
+                </il>
+
+                <il class="box2_3">
+                    <img class="blacksection__box2_1__img" src="расходники/box2_3.jpg" alt="чертежник чертит чертеж">
+                    <p class="blacksection__box2_1__p" >Авторский надзор — от 30 000₽ в месяц</p>
+                </il>
+
+                <il class="box2_4">
+                    <img class="blacksection__box2_1__img" src="расходники/box2_4.jpg" alt="большой склад">
+                    <p class="blacksection__box2_1__p" >Комплектация — 5% от стоимости спецификации</p>
+                </il>
+            </ul>   
+        </div>
         
 
 
