--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
                     <p class="Htextp">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</p>
                 </div>
             </div>
+        </div>
+        
+        <div class="about_us">     
             <h2>О НАС</h2>
             <p class="studio_founded">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.</p>
-
             <a class="hr" href="/404">
                 <div class="hrtxt"> 
                     Посмотреть услуги
